# rs-copier

./: Cargo.toml  README.md
src/: main.rs
