[package]
name = "rs-copier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
anyhow = "1.0.65"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }